--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "furation-interview",
+  "name": "vishwajeet",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,9 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^7.3.0"
+    "express-winston": "^4.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.3.0",
+    "winston": "^3.9.0"
   }
 }
